--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,11 +14,16 @@ description: A new Flutter application.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.3.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
+  rxdart: ^0.23.1
+  provider: ^3.2.0
+  json_annotation: ^3.0.0
+  meta: ^1.1.8
+  intl: ^0.16.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -27,6 +32,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^1.7.2
+  json_serializable: ^3.2.3
+  pedantic_mono: ^1.4.1
 
 
 # For information on the generic Dart part of this file, see the
@@ -41,9 +49,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  assets:
+    - assets/pokemon/images/
+    - assets/pokemon/sprites/
+    - assets/pokemon/pokedex.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
